2004-02-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* VERSION: release 2.1.17
	
	* Documentation/user/refman.itely (Automatic part combining):
	revise documentation of the part-combiner.

	* input/regression/pc-switch-slur.ly (texidoc): remove file.
	
	* input/test/part-combine-{moment,staff}.ly: remove file.

	* input/regression/pc-mmrest.ly (two): remove file.

	* scm/define-music-types.scm (music-descriptions): add
	Solo{One,Two}Event and UnisonoEvent

	* lily/new-part-combine-iterator.cc (unisono): add state_
	variable, signal changes with part-combine-event.

	* input/regression/new-part-combine-text.ly: new file.

	* lily/part-combine-engraver.cc: new file.

2004-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/filter-lilypond-book.py: Handle snippet options.

2004-02-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/music-functions.scm (determine-split-list): detect solo1/2
	and unisono.

	* lily/new-lyric-combine-music-iterator.cc (construct_children):
	revert fix, document why.

	* lily/tie-performer.cc (process_music): new function. Set melisma
	property.

	* lily/tuplet-bracket.cc (make_bracket): make sure that gap is
	always smaller than bracket size.
	(make_bracket): oops. Size of the gap was off by factor 2

	* input/test/text-rotate.ly: new file.

	* scm/new-markup.scm (markup): a macro that provides a
	LilyPond-like syntax in scheme for building markups, in order to
	help markup command definition. (Nicolas Sceaux)

	* input/test/lyrics-skip-notes.ly: new example.

	* lily/parser.yy (post_event): make HYPHEN into postfix event.

	* lily/new-lyric-combine-music-iterator.cc (find_context_below):
	use is_alias() iso. == . This fixes lyrics on
	GregorianTranscriptions. 

2004-02-02  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scripts/lilypond.py (ly_paper_to_latexpaper): Add newline before 
	\thispagestyle{lastpage} to avoid that it's printed on the second
	last page when there's only a single score line on the last page.