@@ -1,3 +1,7 @@
+2004-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scripts/filter-lilypond-book.py: Handle verbatim, latex textwidth.
+
 2004-02-02  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* VERSION: release 2.1.17
